fix: fix the mobile view alignment

--- a/assets/navbar-assets/style/navbar-base.css
+++ b/assets/navbar-assets/style/navbar-base.css
@@ -6679,15 +6679,15 @@ ul.template-widget-list > li > div h6 a {
 }
 
 .template-component-menu-responsive ul li ul li a {
-  padding-left: 30px;
+  padding-left: 0px;
 }
 
 .template-component-menu-responsive ul li ul li ul li a {
-  padding-left: 45px;
+  padding-left: 0px;
 }
 
 .template-component-menu-responsive ul li ul li ul li ul li a {
-  padding-left: 60px;
+  padding-left: 0px;
 }
 
 .template-component-menu-responsive ul li a,
